# ssc-exploration

./: .pre-commit-config.yaml  .tool-versions  LICENSE  README.md  pyproject.toml
data/: ssc-holders.csv  ssc_ido_txn_data.csv
src/: ssc-ido.ipynb  ssc-txns.ipynb
