[tool.poetry]
name = "ssc-exploration"
version = "0.1.0"
description = ""
authors = ["shodh <info@shodh.co>"]

[tool.poetry.scripts]
test = "scripts.test:test"
test_coverage = "scripts.test:test_coverage"
lint = "scripts.lint:lint"
fix = "scripts.lint:fix"
"db-migrate" = "scripts.db:migrate"
"db-legacy_stamp" = "scripts.db:legacy_db_stamp"
"db-rollback" = "scripts.db:rollback"
"db-seed" = "scripts.db:seed"
"db-history" = "scripts.db:migration_history"
"db-generate_migration" = "scripts.db:generate_migration"

[tool.poetry.dependencies]
python = "3.9.6"
fastcore = "^1.3.26"
python-dateutil = "^2.8.2"
python-dotenv = "^0.19.0"
rich = "^10.11.0"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.3"
requests = "^2.26.0"
SQLAlchemy = "^1.4.27"
sqlmodel = "^0.0.4"
returns = "^0.17.0"
streamlit = "^1.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"
autoflake = "^1.4"
black = "^21.9b0"
pre-commit = "^2.15.0"
freezegun = "^1.1.0"
jupyter = "^1.0.0"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "0.1.0"
